<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/emergencia"
        android:icon="@mipmap/ic_launcher_emergency"
        android:title="@string/reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_conf"
        android:layout_width="wrap_content"
        android:orderInCategory="100"
        android:title="@string/m_conf"
        app:showAsAction="never" />
    <item android:id="@+id/menu_idioma"
        android:title="@string/idioma"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/sub_es"
                android:title="@string/idioma_es" />
            <item android:id="@+id/sub_us"
                android:title="@string/idioma_us" />
        </menu>
        </item>

</menu>