<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity"
    android:background="@color/app_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/encabezado_principal"
            android:textColor="@color/negro"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/ET_Main_Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hing_principal"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/pregunta_principal"
            android:textColor="@color/negro"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/fondo_boton"
            android:drawableLeft="@mipmap/ic_launcher_bluetooth"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:onClick="bluetooth"
            android:padding="10dp"
            android:text="@string/Bluetooth"
            android:textColor="@color/Texto_boton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/fondo_boton"
            android:drawableLeft="@mipmap/ic_launcher_wifi"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:onClick="wifi"
            android:padding="10dp"
            android:text="@string/wifi"
            android:textColor="@color/Texto_boton" />

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="76dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/GPS_LOCATION"
                android:textColor="@color/negro"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/latitudeTextGPS"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/titleGPS"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="-57dp"
                android:layout_weight="1"
                android:text="@string/LATITUDE" />

            <TextView
                android:id="@+id/longitudeTextGPS"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="57dp"
                android:layout_weight="1"
                android:text="@string/LONGITUDE" />

            <TextView
                android:id="@+id/latitudeValueGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/latitudeTextGPS"
                android:layout_marginStart="120dp"
                android:layout_marginTop="1dp"
                android:text="0.0000" />

            <TextView
                android:id="@+id/longitudeValueGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/longitudeTextGPS"
                android:layout_alignEnd="@+id/latitudeValueGPS"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="0dp"
                android:text="0.0000" />

            <Button
                android:id="@+id/locationControllerGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:background="@color/fondo_boton"
                android:text="@string/UPDATE_LOCATION"
                android:textColor="@color/Texto_boton" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>